artists/artists.css
/* ... */
  #header-link{
      width: 70%; 
      height: 2.25rem;   
      display: flex;
      flex-direction: row;
      align-items: center;
      text-decoration: none;
      justify-content: start;

  }
      #header-h1 {align-items: center; font-size: 1rem;  font-weight: 500; color:#e3f5ff; padding-left: 20px;} 
      #tree-img {height: 2.25rem; width:2.34rem;} 


/*LOADSCREEN*/
      #loadcontainer{
          width: 100%;
          overflow-y: hidden;
          position: absolute;
          top: 0;
      }
          /*MOBILE*/
          @media screen and (max-width: 850px){
          #loadcontainer {height: calc(2.5rem + 3000px + 4rem);} /*header plus main plus footer - 2rem high internals + 2rem high socials*/
          }                                
          /*DESKTOP*/
          @media screen and (min-width: 850px){
          #loadcontainer {height: calc(2.5rem + 3000px + 2rem);} /*header plus main plus footer - 2rem high internals/socials */
          }
      .loadscreen {
          width: 100%;
          height: 100%;
          background-image: url("/images/starV1frame1.png");
          background-repeat: repeat;
          position: absolute;
          top: 0;
          transform: translateY(0);
          z-index: 20;
          display: flex;
          justify-content: center;
          animation: scrolldown 5s linear 1;
          animation-play-state: running;
          animation-iteration-count: 1;
          animation-fill-mode: both;
      }
      .loadscreen>img{
          width: 184px;
          height: 255px;
      }
      #loadscreen-notfirst{
          animation: scrolldown 2s linear 1;
          animation-play-state: running;
          animation-iteration-count: 1;
          animation-fill-mode: both;
      }
      @media screen and (max-width: 850px){
          @keyframes scrolldown {
          0%{transform: translateY(0);}
          20%{transform: translateY(10%);}
          100%{transform: translateY(100%); display: none; visibility: hidden;}
          }
      }
      @media screen and (min-width: 850px){
          @keyframes scrolldown {
          0%{transform: translateY(0);}
          20%{transform: translateY(10%)}
          100%{transform: translateY(100%); display: none; visibility: hidden;}
          }
      }

/*main*/
main {
  display: flex;
  flex-direction: column;
  width: 100%;
  align-items: center;
} 

.breaker{border-top: 1px inset white; height: 1rem; width: 90vw; display: block; margin: 0; padding: 0; align-self: center;}
.breaker3{height: 1rem; width: 90vw; display: block; margin: 0; padding: 0; align-self: center;}

/*sections*/

.span-filler{height: 3rem; width: 100%;}

section {width: 100%; height:fit-content; z-index: 1;}

#filler{height: 100px}

   

/*HIGHLIGHT REEL 1*/

#highlight {
  margin-top: 12vw;
  width: 100%;
  /*aspect-ratio: 1350/1410;*/ /*aspect ratio matches background images*/
  /*  margin-top: -8%;
  margin-bottom: -13%;*/
  z-index: 3;
  }
  
    #roots-highlight{
      margin: 0; z-index: 4;
      width: 100%;
    }
    
    #highlight>#roots-highlight{
      display: flex;
    }

      .slider {
      display: flex;
      flex-direction: row;
      justify-content: space-between;
      align-items: center;  
        /*height: 233px;*/
        display: flex;
        width: 100%;
      }

        .slider>button{
          height: 100%;
          z-index: 31;
          border: none;
          flex: 1;
          color: white;
          background-color: transparent;
        }
            #slide-left {/*padding-right: 5%;*/
              background-image: url("/images/slidebuttonarrowleft.png");
              background-size: cover;
            }
            #slide-right {/*padding-left: 5%;*/
              background-image: url("/images/slidebuttonarrowright.png");
              background-size: cover;
            }

        .slides-container{
          z-index: 0;
          aspect-ratio: 1350/690;
          width: 100%;
          left: 0px;
          flex: 8;

        }
          .slide-anchor {
              
              border: none;
              position: absolute;
              aspect-ratio: 16/9; /*SLIDE IMAGE THUMBNAIL SIZE HERE*/
              /*width: 33%;*/
              width: 50%;
              transition: left 500ms ease-in-out, transform 500ms ease-in-out;
            }

            .slider img, .slider iframe{
              /*opacity: .95;*/
              width: 100%;
              height: 100%;
              border: none;
              box-shadow: 0px 0px 2px 2px black;
            }

/*highlight reel 1 banner*/

.banner-container{position: absolute; width: 100%; height: 97%;  overflow: hidden;}
.banner-slide{transform: rotate(-20deg); position: absolute; top: 40%; left: -10%; width: 120%; height: 3rem; overflow: hidden; text-wrap: nowrap; background-color: #b1e2fd5b; }

.slide-anchor:hover .banner-text{color: rgba(0, 0, 0, 0.651); }
.slide-anchor:hover .banner-slide{ background-color: #b1e2fd8e; height: 3.1rem; }

.banner-text {
  position: relative; left: -10px; font-size: 3rem; bottom: .2rem; color: rgba(255, 255, 255, 0.425); 
  /* animation properties */
  -moz-transform: translateX(100%);
  -webkit-transform: translateX(100%);
  transform: translateX(100%);
  
  -moz-animation: my-animation 20s linear infinite;
  -webkit-animation: my-animation 20s linear infinite;
  animation: my-animation 20s linear infinite;
}

/* for Firefox */
@-moz-keyframes my-animation {
  from { -moz-transform: translateX(100%); }
  to { -moz-transform: translateX(-100%); }
}

/* for Chrome */
@-webkit-keyframes my-animation {
  from { -webkit-transform: translateX(100%); }
  to { -webkit-transform: translateX(-100%); }
}

@keyframes my-animation {
  from {
    -moz-transform: translateX(100%);
    -webkit-transform: translateX(100%);
    transform: translateX(100%);
  }
  to {
    -moz-transform: translateX(-100%);
    -webkit-transform: translateX(-100%);
    transform: translateX(-100%);
  }
}
/* ... */

